Se coloco imagen como fondo

--- a/index.html
+++ b/index.html
@@ -55,21 +55,14 @@
 </header>    
 
 <!--1er imagen principal -->      
-<main class="mt-5 container">
-    <div class="row">
-      <div class="col-md-6">
-        <img src="./images/hawaii.jpg" class="img-fluid">
-      </div>
-      <div class="col-md-6">
-        <h1>Conf Bs As</h1>
-        <p>La conferencia en Buenos Aires se centrará en temas actuales e importantes para el ámbito empresarial y tecnológico. Se abordarán tendencias emergentes en el mundo digital, así como enfoques innovadores para abordar los desafíos actuales del mercado. </p>
-        <div class="botones">
-          <button class="boton1 btn btn-primary">Quiero ser orador</button>
-          <button class="boton2 btn btn-secondary">Comprar tickets</button>
-        </div>
-      </div>
+<main class="mt-5" style="background-image: url('./images/hawaii.jpg');">
+    <h1>Conf Bs As</h1>
+    <p>La conferencia en Buenos Aires se centrará en temas actuales e importantes para el ámbito empresarial y tecnológico. Se abordarán tendencias emergentes en el mundo digital, así como enfoques innovadores para abordar los desafíos actuales del mercado. </p>
+    <div class="botones">
+        <button class="btn btn-primary boton1">Quiero ser orador</button>
+        <button class="btn btn-secondary boton2">Comprar tickets</button>
     </div>
-  </main>
+</main>
   
 
 <!--Oradores en 3 columnas -->   
