--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="col-12 col-md-6 bg-secondary text-white">
           <h3>Bs As - Octubre</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero optio deserunt atque debitis deleniti minima, neque fugit ab laborum tempora nesciunt iure officia nostrum architecto delectus quidem? Tempora, ducimus?</p>
-          <button class="boton1">Conocé Más</button>
+          <button class="btn btn-primary boton1">Conocé Más</button>
         </div>
       </div>
     </div>
