animacion agregada con animated https://animate.style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark mx-auto px-md-5">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img class="logo" src="images/codoacodo.png" alt="" width="50" height="44">
+                <img class="logo animate__animated animate__flip animate__slow " src="images/codoacodo.png" alt="" width="50" height="44">
                 <span class="titulo ml-2">Conf Bs As</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
 </header>    
 
 <!--1er imagen principal -->      
-<main class="mt-10 animate__animated animate__fadeIn" style="background-image: url('./images/hawaii.jpg');">
+<main class="mt-10 animate__animated animate__fadeIn animate__slow" style="background-image: url('./images/hawaii.jpg');">
     <h1>Conf Bs As</h1>
     <p>La conferencia en Buenos Aires se centrará en temas actuales e importantes para el ámbito empresarial y tecnológico. Se abordarán tendencias emergentes en el mundo digital, así como enfoques innovadores para abordar los desafíos actuales del mercado. </p>
     <div class="botones">
@@ -77,7 +77,7 @@
                       <img src="./images/steve.jpg" class="card-img-top" alt="Steve Jobs">
                       <div class="card-body">
                         <div>
-                            <button type="button" class="btn btn-warning animate__animated animate__flip"><p class="mb-0">JavaScript</p></button>
+                            <button type="button" class="btn btn-warning animate__animated"><p class="mb-0">JavaScript</p></button>
                             <button type="button" class="btn btn-info animate__animated animate__flip"><p class="mb-0">React</p></button>
                         </div>
                         
