--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   
 
 <!--Oradores en 3 columnas -->   
-    <section  class="gradiente">
+    <section  >
         <h2 class="text-center"><span class="smaller-text">CONOCE A LOS </span> <br>ORADORES</h2>
         <div class="cajas">
             <div class="container">
