comentarios en codificación

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="es">
 
 <head>
+<!-- codificación de caracteres utilizada en la página web -->
     <meta charset="UTF-8">
+<!-- indica al navegador web cómo debe interpretar la página web en términos de compatibilidad con versiones antiguas del navegador Internet Explorer -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!-- SEO Meta Tags -->
     <meta name="keywords" content="php, curso, codoacodo, codo a codo">
@@ -10,12 +12,12 @@
 		<meta name="author" content="Víctor Alberto Nibeyro">
 <!-- Icono de la pestaña tambien si se modifica ver en <a class="navbar-brand" href="#"><img src=... -->         
         <link rel="shortcut icon" type="image/x-icon" href="./images/codoacodo.png"> 
-    <!-- Vista determinada  necesaria para bootstrap -->
+<!-- Vista determinada  necesaria para bootstrap -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
      <link rel="stylesheet" href="./styles/v5.3.0-alpha3/node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./styles/style.css"> 
     <link rel="stylesheet" href="./styles/animate.css">
-    <!-- Renovación de cache -->
+<!-- Renovación de cache -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
         <title>Codo a codo </title>
 </head>
