--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="container-fluid">
       <div class="row g-0">
         <div class="col-12 col-md-6">
-          <img src="./images/honolulu.jpg" alt="Descripción de la imagen" class="img-fluid">
+          <img src="./images/honolulu.jpg" alt="Descripción de la imagen" class="img-fluid m-3 p-2>
         </div>
         <div class="col-12 col-md-6 bg-secondary text-white">
           <h3>Bs As - Octubre</h3>
