--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 <section>
     <div class="container-fluid">
       <div class="row g-0">
-        <div class="col-12 col-md-6">
-          <img src="./images/honolulu.jpg" alt="Descripción de la imagen" class="img-fluid m-3 p-3">
+        <div class="col-12 col-md-6 p-3">
+          <img src="./images/honolulu.jpg" alt="Descripción de la imagen" class="img-fluid w-100 h-100 object-fit-cover">
         </div>
-        <div class="col-12 col-md-6 bg-secondary text-white">
+        <div class="col-12 col-md-6 bg-secondary text-white p-3">
           <h3>Bs As - Octubre</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero optio deserunt atque debitis deleniti minima, neque fugit ab laborum tempora nesciunt iure officia nostrum architecto delectus quidem? Tempora, ducimus?</p>
           <button class="btn btn-primary boton1">Conocé Más</button>
@@ -137,6 +137,7 @@
       </div>
     </div>
   </section>
+  
 
   
               
