se corrigió padding y margin, agregando bordes a la sección <!--2 columnas 1 de imagen, otra de texto -->

--- a/index.html
+++ b/index.html
@@ -124,23 +124,22 @@
 
 <!--2 columnas 1 de imagen, otra de texto -->   
 <section>
-    <div class="container-fluid">
-      <div class="row g-0">
-        <div class="col-12 col-md-6 p-3">
-          <img src="./images/honolulu.jpg" alt="Descripción de la imagen" class="img-fluid w-100 h-100 object-fit-cover">
-        </div>
-        <div class="col-12 col-md-6 bg-secondary text-white p-3">
-          <h3>Bs As - Octubre</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero optio deserunt atque debitis deleniti minima, neque fugit ab laborum tempora nesciunt iure officia nostrum architecto delectus quidem? Tempora, ducimus?</p>
-          <button class="btn btn-primary boton1">Conocé Más</button>
-        </div>
+  <div class="container-fluid">
+    <div class="row gx-3 gx-md-1">
+      <div class="col-12 col-md-6 pt-1 pb-1">
+        <img src="./images/honolulu.jpg" alt="Descripción de la imagen" class="img-fluid">
+      </div>
+      <div class="col-12 col-md-6 bg-secondary text-white border-top border-bottom">
+        <h3>Bs As - Octubre</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis vero optio deserunt atque debitis deleniti minima, neque fugit ab laborum tempora nesciunt iure officia nostrum architecto delectus quidem? Tempora, ducimus?</p>
+        <button class="btn btn-primary boton1">Conocé Más</button>
       </div>
     </div>
-  </section>
-  
+  </div>
+</section>
 
   
-              
+             
 
 <!--Formulario -->            
 <section class="formulario py-5">
