--- a/compra_ticket.html
+++ b/compra_ticket.html
@@ -28,8 +28,8 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark mx-auto px-md-5">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img class="logo animate__animated animate__flip animate__slow " src="images/codoacodo.png" alt="" width="50" height="44">
-                <span class="titulo ml-2">Conf Bs As</span>
+                <img class="logo animate__animated animate__flip animate__slow " src="images/codoacodo.png" alt="" width="50" height="44" href="index.html">
+                <span class="titulo ml-2" href="index.html">Conf Bs As</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">La conferencia</a>
+                        <a class="nav-link" href="index.html">La conferencia</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Los oradores</a>
