Se agrego comentarios al archivo

--- a/compra_ticket.html
+++ b/compra_ticket.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./styles/animate.css">
 <!-- Renovación de cache -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-        <title>Codo a codo - COmpra de Tikets</title>
+        <title>Codo a codo - Compra de Tikets</title>
 </head>
 
 <body>
@@ -57,10 +57,7 @@
     </nav>
 </header >    
 
-<!--1er imagen principal -->      
-
-
-<!--Oradores en 3 columnas -->   
+<!-- Columnas de descuentos -->      
 
     <div class="container mt-5 mt-lg-5 pt-5">
         <div class="row">
@@ -160,7 +157,7 @@
 
 
 
-
+<!-- Script de calculo de descuentos y demas -->      
 <script>
     function calcularTotal() {
         var cantidad = parseInt(document.getElementById('Cantidad').value);
