en styles se agrego top-padding cuando se hace clic a los elemnetos del menu de navegación

--- a/compra_ticket.html
+++ b/compra_ticket.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./styles/animate.css">
 <!-- Renovación de cache -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-        <title>Codo a codo - Compra de Tikets</title>
+        <title>Codo a codo - Compra de Tickets</title>
 </head>
 
 <body>
