--- a/compra_ticket.html
+++ b/compra_ticket.html
@@ -121,7 +121,7 @@
                 <div class="row g-3 mt-4">
                     <div class="col-md-6">
                         <label for="Cantidad" class="form-label">Cantidad</label>
-                        <input class="form-control" type="text" name="Cantidad" id="Cantidad" placeholder="Cantidad">
+                        <input class="form-control" type="text" name="Cantidad" id="Cantidad" placeholder="Cantidad" onkeypress="return soloNumeros(event)">
                     </div>
                     <div class="col-md-6">
                         <label for="Categoria" class="form-label">Categoría</label>
@@ -159,6 +159,14 @@
 
 <!-- Script de calculo de descuentos y demas -->      
 <script>
+    function soloNumeros(event) {
+        var charCode = event.which ? event.which : event.keyCode;
+        if (charCode > 31 && (charCode < 48 || charCode > 57)) {
+            return false;
+        }
+        return true;
+    }
+
     function calcularTotal() {
         var cantidad = parseInt(document.getElementById('Cantidad').value);
         var categoria = document.getElementById('Categoria').value;
@@ -190,6 +198,7 @@
         document.getElementById('Categoria').selectedIndex = 0;
         document.getElementById('totalAPagar').innerHTML = 'Total a Pagar: $';
     }
+
 </script>
 
 
