modified:   compra_ticket.html

--- a/compra_ticket.html
+++ b/compra_ticket.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="row g-3 mt-4">
                     <div class="col-md-12">
-                        <input class="form-control" type="text" name="Comentario" id="Comentario" placeholder="Correo">
+                        <input class="form-control" type="mail" name="mail" id="mail" placeholder="Correo">
                     </div>
                 </div>
                 <div class="row g-3 mt-4">
