--- a/compra_ticket.html
+++ b/compra_ticket.html
@@ -74,7 +74,7 @@
             <div class="col-md-4 mb-4">
                 <div class="bg-white p-3 border border-primary">
                     <div class="text-center">
-                        <h5>Traine</h5>
+                        <h5>Trainee</h5>
                         <p>Tienen un descuento</p>
                         <p>50%</p>
                         <p>• presentar documentación</p>
