--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#conferencia">La conferencia</a>
+                        <a class="nav-link" href="index.html#conferencia" onclick="changeTextColor(this)">La conferencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#oradores">Los oradores</a>
+                        <a class="nav-link" href="index.html#oradores" onclick="changeTextColor(this)">Los oradores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#lugaryfecha">El lugar y la fecha</a>
+                        <a class="nav-link" href="index.html#lugaryfecha" onclick="changeTextColor(this)">El lugar y la fecha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#formulario">Conviértete en orador</a>
-                    </li>
+                        <a class="nav-link" href="index.html#formulario" onclick="changeTextColor(this)">Conviértete en orador</a>
+                    </li>           
                     <li class="nav-item">
                         <a class="nav-link text-success font-weight-bold font-compra" href="compra_ticket.html">Comprar tickets</a>
                     </li>
@@ -139,6 +139,7 @@
   </div>
 </section>
 
+
   
              
 
@@ -179,6 +180,18 @@
     </div>
 </section>
     
+
+<script>
+    function changeTextColor(element) {
+        var links = document.querySelectorAll('.nav-link');
+        links.forEach(function (link) {
+            link.classList.remove('active1');
+        });
+        element.classList.add('active1');
+    }
+</script>
+
+
 <!--Pie de página -->   
 <footer class="bg-dark py-3">
     <div class="container">
