--- a/compra_ticket.html
+++ b/compra_ticket.html
@@ -58,7 +58,7 @@
 </header >    
 
 <!-- Columnas de descuentos -->      
-
+<section id="columnas_descuentos">
     <div class="container mt-5 mt-lg-5 pt-5">
         <div class="row">
             <div class="col-md-4 mb-4">
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>   
-
+</section>
     <section>
     <h2 class="text-center"><span class="smaller-text">VENTA </span> <br>VALOR DEL TICKET $200</h2>
 
