--- a/compra_ticket.html
+++ b/compra_ticket.html
@@ -51,6 +51,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-success font-weight-bold font-compra" href="compra_ticket.html" id="comprarTickets">Comprar tickets</a>
                     </li>
+                    <li class="nav-item">
+                        <img class="nav-link" src="images/osc.png" alt="" width="50" height="44" onclick="toggleDarkMode()">
+                    </li>  
                 </ul>
             </div>
         </div>
@@ -210,6 +213,14 @@ if (window.location.href.includes('compra_ticket.html')) {
     // Quitar la clase CSS si no estamos en la página "Comprar tickets"
     comprarTicketsLink.classList.remove('active');
 }
+
+function toggleDarkMode() {
+        // Obtener el elemento <body>
+        var body = document.querySelector('body');
+        
+        // Cambiar la clase CSS del elemento <body> para alternar entre los estilos claro y oscuro
+        body.classList.toggle('dark-mode');
+    }
 
 </script>
 
