--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-success font-weight-bold font-compra" href="compra_ticket.html">Comprar tickets</a>
                     </li>
+                    <li class="nav-item">
+                        <img class="nav-link" src="images/osc.png" alt="" width="50" height="44" onclick="toggleDarkMode()">
+                    </li>  
                 </ul>
             </div>
         </div>
@@ -188,6 +191,15 @@
             link.classList.remove('active1');
         });
         element.classList.add('active1');
+    }
+
+
+    function toggleDarkMode() {
+        // Obtener el elemento <body>
+        var body = document.querySelector('body');
+        
+        // Cambiar la clase CSS del elemento <body> para alternar entre los estilos claro y oscuro
+        body.classList.toggle('dark-mode');
     }
 </script>
 
