--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p>La conferencia en Buenos Aires se centrará en temas actuales e importantes para el ámbito empresarial y tecnológico. Se abordarán tendencias emergentes en el mundo digital, así como enfoques innovadores para abordar los desafíos actuales del mercado. </p>
     <div class="botones">
         <button class="btn btn-primary boton1"  href="index.html#oradores"git >Quiero ser orador</button>
-        <button class="btn btn-secondary boton2" href="compra_ticket.html">Comprar ticket</button>
+        <button class="btn btn-secondary boton2" href="compra_ticket.html">Comprar tickets</button>
     </div>
 </main>
   
