--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <h1>Conf Bs As</h1>
     <p>La conferencia en Buenos Aires se centrará en temas actuales e importantes para el ámbito empresarial y tecnológico. Se abordarán tendencias emergentes en el mundo digital, así como enfoques innovadores para abordar los desafíos actuales del mercado. </p>
     <div class="botones">
-        <button class="btn btn-primary boton1">Quiero ser orador</button>
-        <button class="btn btn-secondary boton2">Comprar tickets</button>
+        <a class="btn btn-primary boton1"  href="index.html#formulario"git >Quiero ser orador</a>
+        <a class="btn btn-secondary boton2" href="compra_ticket.html">Comprar tickets</a>
     </div>
 </main>
   
